--- a/elemental_clash/package.json
+++ b/elemental_clash/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/utilities": "^3.2.2",
+    "@google/generative-ai": "^0.24.0",
     "@supabase/supabase-js": "^2.49.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
